# tiny-cpp-cookiecutter

./: .gitignore  LICENSE  README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.folder}}/: .gitignore  CMakeLists.txt  LICENSE  main.cpp
